Creazione della Home Modifiche css Eliminazione di un client annidato nel client principale

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -66,3 +66,37 @@ input{
   cursor: pointer;
   font-size: 20px;
 }
+
+/* HOME */
+.split {
+  height: 100%;
+  width: 50%;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  overflow-x: hidden;
+  padding-top: 20px;
+}
+
+.left {
+  left: 0;
+  background-color: rgb(170, 170, 170);
+}
+
+.right {
+  right: 0;
+  background-color: rgb(124, 124, 124);
+}
+
+.centered {
+  position: absolute;
+  top: 20%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+}
+
+.centered img {
+  width: 150px;
+  border-radius: 50%;
+}
