--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,6 +3,10 @@
   padding: 0;
 }
 
+.App{
+  width: 100vw;
+  height: 100vh;
+}
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -40,13 +44,26 @@ input{
   width: 400px;
   padding: 0.5rem;
   border-bottom: 1px solid #000;
+  margin-top: 20px;
 }
 
 .add{
-  background-color: #000;
+  background-color: #252525;
   color: #fff;
+  width: 5%;
   padding: 0.5rem 1.5rem;
+  margin-top: 70px;
+  position: absolute;
+  top: 30%;
+  left: 55%;
+  border-radius: 5px;
+  transform: translate(-50%, -50%);
+  text-align: center;
+}
+
+.add:hover{
   cursor: pointer;
+  background-color: #626262;
 }
 
 .cu{
@@ -74,6 +91,43 @@ input{
   font-size: 20px;
 }
 
+.sidebar{
+  height: 100vh;
+  width: 250px;
+  background-color: #252525;
+}
+
+.List{
+  height: auto;
+  padding: 0;
+  width: 100%;
+  margin-top: 30px;
+}
+
+.List .row{
+  width: 100%;
+  height: 50px;
+  list-style-type: none;
+  margin: 0%;
+  display: flex;
+  flex-direction: row;
+  color: white;
+  justify-content: center;
+  align-items: center;
+  margin-top: 10px;
+}
+
+.List .row:hover{
+  cursor: pointer;
+  background-color: #626262;
+}
+
+.logo{
+  width: 25%;
+  margin-top: 30px;
+  margin-left: 90px;
+}
+
 /* HOME */
 .split {
   height: 100%;
@@ -98,7 +152,7 @@ input{
 .centered {
   position: absolute;
   top: 20%;
-  left: 50%;
+  left: 55%;
   transform: translate(-50%, -50%);
   text-align: center;
 }
@@ -106,4 +160,16 @@ input{
 .centered img {
   width: 150px;
   border-radius: 50%;
+}
+
+.cuCentered{
+  position: absolute;
+  top: 50%;
+  left: 30%;
+  width: 50%;
+}
+@media only screen and (max-width: 850px) {
+  .sidebar{
+    display: none;
+  }
 }
