aggiunti componenti e controller per History e Vehicle

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -164,6 +164,8 @@ input{
 
 .cuCentered{
   position: absolute;
+  max-height: 200px;
+  overflow-y: scroll;
   top: 50%;
   left: 30%;
   width: 50%;
