--- a/client/src/index.css
+++ b/client/src/index.css
@@ -156,6 +156,10 @@ input{
   left: 55%;
   transform: translate(-50%, -50%);
   text-align: center;
+  background-color: #d7d7d7;
+  border-radius: 5px;
+  height: 250px;
+  width: 600px;
 }
 
 .centered img {
@@ -175,4 +179,39 @@ input{
   .sidebar{
     display: none;
   }
+}
+
+/*---------CREATE PATH-----------*/
+.modal, .overlay {
+  width: 100vw;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  position: fixed;
+}
+
+.overlay {
+  background: rgba(49,49,49,0.8);
+}
+.modal-content {
+  position: absolute;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  line-height: 1.4;
+  background: #f1f1f1;
+  padding: 14px 28px;
+  border-radius: 3px;
+  max-width: 600px;
+  min-width: 300px;
+}
+
+.close-modal {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  padding: 5px 7px;
+  cursor: pointer;
 }
