--- a/client/src/index.css
+++ b/client/src/index.css
@@ -215,3 +215,14 @@ input{
   padding: 5px 7px;
   cursor: pointer;
 }
+
+.input{
+  display: inline-block;
+  width: 30%;
+  border-radius: 5px;
+  margin-left: 10px;
+}
+
+.error{
+  display: none;
+}
