--- a/client/src/index.css
+++ b/client/src/index.css
@@ -269,3 +269,29 @@ input{
   padding: 10px;
   cursor: pointer;
 }
+
+/*---------SIMULATOR---------*/
+.getButton{
+  background-color: #252525;
+  color: #fff;
+  padding: 0.5rem 1.5rem;
+  margin-top: 20px;
+  border-radius: 5px;
+  text-align: center;
+  cursor: pointer;
+}
+
+.getButton:hover{
+  cursor: pointer;
+  background-color: #626262;
+}
+
+.cuCenteredS{
+  position: absolute;
+  max-height: 230px;
+  overflow-y: scroll;
+  top: 50%;
+  left: 30%;
+  width: 50%;
+  display: none;
+}
