--- a/client/src/index.css
+++ b/client/src/index.css
@@ -8,11 +8,10 @@
   height: 100vh;
 }
 body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #f2f2f2;
 }
 
 .container{
@@ -24,6 +23,7 @@ body {
 h1{
   margin-top: 1rem;
   text-align: center;
+  color: #274472;
 }
 
 h2{
@@ -89,7 +89,7 @@ input{
   position: relative;
   margin-top: 1rem;
   width: 50%;
-  background-color: #000;
+  background-color: #274472;
   color: #fff;
   padding: 1.5rem 3rem;
   border-radius: 5px;
@@ -110,10 +110,14 @@ input{
   font-size: 20px;
 }
 
+.iconSide{
+  margin-right: 10px;
+}
+
 .sidebar{
   height: 100vh;
   width: 250px;
-  background-color: #252525;
+  background-color: #0f2d49;
   position: fixed;
 }
 
@@ -139,13 +143,19 @@ input{
 
 .List .row:hover{
   cursor: pointer;
-  background-color: #626262;
+  background-color: #5885AF;
 }
 
 .logo{
   width: 25%;
   margin-top: 30px;
   margin-left: 90px;
+}
+
+.logoH{
+  width: 70%;
+  left: 55%;
+  margin-top: 100px;
 }
 
 /* HOME */
@@ -175,7 +185,7 @@ input{
   left: 55%;
   transform: translate(-50%, -50%);
   text-align: center;
-  background-color: #d7d7d7;
+  background-color: #dedede;
   border-radius: 5px;
   height: 250px;
   width: 600px;
@@ -202,6 +212,17 @@ input{
   border-radius: 5px;
   height: 250px;
   width: 600px;
+}
+
+.centeredH{
+  position: absolute;
+  top: 20%;
+  left: 55%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  border-radius: 5px;
+  height: 250px;
+  width: 800px;
 }
 
 .centered img {
@@ -274,8 +295,18 @@ input{
 }
 
 .button{
-  background-color: #000;
+  background-color: #252525;
   color: #d7d7d7;
+  border-width: 0;
+  border-radius: 5px;
+  margin-left: 10px;
+  padding: 10px;
+  cursor: pointer;
+}
+
+.button:hover{
+  background-color: #626262;
+  border-width: 0;
   border-radius: 5px;
   margin-left: 10px;
   padding: 10px;
@@ -286,6 +317,7 @@ input{
 .getButton{
   background-color: #252525;
   color: #fff;
+  border-width: 0px;
   padding: 0.5rem 1.5rem;
   margin-top: 20px;
   border-radius: 5px;
